[package]
name = "pddl_rs"
version = "0.3.1"
edition = "2021"
description = "PDDL parser"
license = "MIT"
repository = "https://github.com/Hexorg/pddl_rs/"

[lib]
name = "pddl_rs"

[profile.release]
debug = true

[dependencies]
enumset = "1.0.12"
ariadne = "0.3.0"
nom = "7.1.3"
lazy_static = "1.4.0"
serde = "1.0.192"
bincode = "1.3.3"
svg = "0.14.0"
rustworkx-core = "0.13.2"
